Tue Jan 11 23:57:30 1994  John Gilmore  (gnu@cygnus.com)

	* coffread.c (read_coff_symtab):  Set PC bounds of _globals_ symtab
	to [0,0] rather than [0, end of first source file].  This avoids
	problems with other parts of GDB looking for linetables in the
	_globals_ symtab.  Eliminate variables num_object_files and
	first_object_file_end.

Tue Jan 11 00:53:46 1994  John Gilmore  (gnu@cygnus.com)

	* a29k-tdep.c (init_frame_info):  Cast null arg to examine_tag.
	(pop_frame):  Restore PC2 and LR0 from dummy frames.
	(push_dummy_frame):  Save PC2 and LR0 into dummy frames.
	(setup_arbitrary_frame):  Handle 3 args and set up real frames.
	* config/a29k/tm-a29k.h (FRAME_NUM_ARGS):  Update comments.
	(DUMMY_FRAME_RSIZE):  Add 2 longwords for PC2 and LR0.
	(SETUP_ARBITRARY_FRAME):  Define.

Tue Jan 11 06:59:10 1994  Jim Kingdon  (kingdon@deneb.cygnus.com)

	* infrun.c, config/mips/tm-irix5.h: Remove #if 0'd AT_FUNCTION_START.

Tue Jan 11 14:27:03 1994  Ian Lance Taylor  (ian@tweedledumb.cygnus.com)

	* remote-udi.c (udi_resume): Correct prototype.

Tue Jan 11 11:10:30 1994  Jeffrey A. Law  (law@snake.cs.utah.edu)

        * config/pa/tm-hppa.h (FRAME_FIND_SAVED_REGS): Call
	hppa_frame_find_saved_regs.
	* hppa-tdep.c (dig_fp_from_stack): Delete function.
	(prologue_inst_adjust_sp): New function.
	(is_branch, inst_saves_gr, inst_saves_fr): New functions.
	(skip_prologue): Completely rewrite to use unwind information.
	(hppa_frame_find_saved_regs): Likewise.

Tue Jan 11 06:59:10 1994  Jim Kingdon  (kingdon@deneb.cygnus.com)

	* remote-mips.c (mips_wait): Use new function mips_signal_from_protocol
	to convert a signal number with appropriate bounds checking.

	* remote-mips.c (mips_wait): Fix typos (0x177 -> 0177, 0x377 -> 0377).

Tue Jan 11 00:53:46 1994  John Gilmore  (gnu@cygnus.com)

	* stack.c (frame_info):  If FRAME_FIND_SAVED_REGS isn't defined,
	print a newline to end the display anyway.

	* sparc-tdep.c (sparc_pop_frame):  Pop the fsr and csr (float and